kubernetes/02_webapp/app.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: k8s-ns1
  labels:
    app: webapp
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: webapp
